# pm-arbitrage

./: .env.example  .gitignore  LIVE_EXECUTOR_LEARNINGS.md  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
docs/: ADAPTER_CONVENTIONS.md  BUG_FIXES_AND_PREVENTION.md  BUG_FIXES_SUMMARY.md  QUICK_FIX_REFERENCE.md  README_BUG_PREVENTION.md
docs/brainstorms/: 2026-02-03-live-trading-mvp-brainstorm.md  2026-02-04-sprint9-stabilization-brainstorm.md  2026-02-06-kalshi-integration-brainstorm.md
docs/plans/: 2026-01-30-arbitrage-bot-design.md  2026-01-30-implementation-plan.md  2026-01-31-arbitrage-math-analysis.md  2026-01-31-detection-enhancements.md  2026-01-31-sprint3-opportunity-scanner.md  2026-01-31-sprint4-risk-guardian-paper-executor.md  2026-01-31-sprint5-strategy-capital-allocator.md  2026-01-31-sprint6-streamlit-dashboard.md  (+15 more)
scripts/: dry_run_validation.py  run_agents.py  run_dashboard.py  run_websocket.py  smoke_binance.py  test_api_connection.py
tests/: __init__.py  conftest.py  test_pilot.py
todos/: 001-complete-p1-silent-price-fallback.md  002-complete-p1-coingecko-cache-no-expiry.md  003-complete-p1-dashboard-pool-per-request.md  004-complete-p1-channel-name-mismatch.md  005-pending-p2-15s-poll-interval-slow.md  006-complete-p2-import-order-violation.md  007-complete-p2-race-condition-batch-fetch.md  008-pending-p2-dashboard-no-api.md  009-complete-p2-hardcoded-db-defaults.md  010-complete-p3-inconsistent-error-handling.md  011-complete-p3-dashboard-error-leaks-info.md  012-pending-p3-nest-asyncio-workaround.md
(+100 files in other folders)
